WINDUP-2171 JDK 11 compatibility - CLI (#349)
* WINDUP-2171 Added JDK 11 profile for testing

* WINDUP-2171 Fix rules with same ID

* WINDUP-2171 Enhanced Java 9+ profile activation